--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,17 @@
-== README
+Still Need:
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+comments form and edit
 
-Things you may want to cover:
+recipes show and index
 
-* Ruby version
+ Add image selection/upload field to edit/create pages
 
-* System dependencies
+ Add image(s) to recipe show page
 
-* Configuration
+ Add image (thumb) to recipe index page
 
-* Database creation
+ Add rating selection to comment form
 
-* Database initialization
+ 'my_recipes' page
 
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+ 'user_recipes' page
